--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,13 @@ authors = ["Jago Stong-Wright <jagoosw@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 
 [compat]
+Adapt = "3.7"
 KernelAbstractions = "0.9"
 Oceananigans = "0.90"
 Roots = "2"
