--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.4.0"
 
 [deps]
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
@@ -16,4 +15,5 @@ Adapt = "3.7"
 KernelAbstractions = "0.9"
 Oceananigans = "0.90"
 Roots = "2"
+Test = "1.9"
 julia = "1.9"
