--- a/Project.toml
+++ b/Project.toml
@@ -9,13 +9,20 @@ KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 OceanBioME = "a49af516-9db8-4be4-be45-1dad61c5a376"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Adapt = "3.7"
+CUDA = "5"
 KernelAbstractions = "0.9"
 OceanBioME = "0.9"
 Oceananigans = "0.90"
 Roots = "2"
 Test = "1.9"
 julia = "1.9"
+
+[extras]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "CUDA"]
