--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,9 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 [compat]
 Adapt = "3.7"
 CUDA = "5"
+KernelAbstractions = "0.9.22"
+OceanBioME = "0.10.3"
+Oceananigans = "0.91.3"
 Roots = "2"
 Test = "1.10"
 julia = "1.10"
