--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 
 [compat]
-Adapt = "3.7"
+Adapt = "3.7, 4"
 CUDA = "5"
 KernelAbstractions = "0.9.22"
 OceanBioME = "0.13"
