--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ Adapt = "3.7, 4"
 CUDA = "5"
 KernelAbstractions = "0.9.22"
 OceanBioME = "0.13"
-Oceananigans = "0.93, 0.94, 0.95"
+Oceananigans = "0.95"
 Roots = "2"
 Test = "1.10"
 julia = "1.10"
